# resume_of_ocaml

./: .gitmodules  .ocamlformat  dune  dune-project
.sass-cache/c6649732647c2bb5f77cf6960eba59fbce93768b/: style.sassc
latex/: latex_template.tex.mustache
output/: en.tex  fr.tex  style.css.map
site/: Gemfile  dune  style.sass
site/_site/: 404.html  en.aux  en.fdb_latexmk  en.fls  en.out  en.tex  fr.tex  index.html  resume_en.html  style.css  style.sass
site/_site/js/: blog_loader.js  paper-voronoi.js
site/files/: dune
src/: dune  main.ml
src/blog_gen/: blog.ml  dune  main.ml  md_helpers.ml  omd_helpers.ml  result_syntax.ml
src/blog_gen/lib/: blog.ml  dune  md_helpers.ml  md_transform.ml
src/blog_gen/test/: dune  health_check.t
src/blog_gen/test/health_check/: dune  health_check.ml
src/instance/: dune  instance.ml
src/jsoo/: blog_loader.ml  dune  highlight.ml  voronoi.ml
src/lib/: breadcrumbs.ml  dune  escapers.ml  experience.ml  experience.mli  formation.ml  formation.mli  html.ml  language.ml  language.mli  makers.ml  multi_string.ml  multi_string.mli  resume.ml  resume.mli  resume_builder.ml  runtime_template.ml  skill.ml  skill.mli  strength.ml  strength.mli
src/lib/templates/: latex_en.eml  latex_en.eml.tex  latex_fr.eml  latex_fr.eml.tex
src/lib/templates/site/: blog.eml.html  index.eml  index.eml.html  page_404.eml.html  page_bot.eml.html  page_top.eml  page_top.eml.html  resume.eml.html  resume_en.eml  software.eml.html
src/lib/templates/site/components/: breadcrumbs.eml.html  contact.eml  contact.eml.html  navmenu.eml  navmenu.eml.html  sidebar_top.eml.html
tests/: index.html  style.css
